improved window positioning
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1137 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/log.ui
+++ b/share/ui/log.ui
@@ -16,6 +16,7 @@
     <property name="border_width">5</property>
     <property name="title" translatable="yes">PyCAM event log</property>
     <property name="role">pycam-log</property>
+    <property name="window_position">center</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox6">
