--- a/share/ui/plugin_selector.ui
+++ b/share/ui/plugin_selector.ui
@@ -42,6 +42,7 @@
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Plugins</property>
     <property name="role">pycam-plugins</property>
+    <property name="window_position">center</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
