turned the process parameter manager into a generic parameter manager migrated the tool parameter handling to use the above manager
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1143 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/bounds.ui
+++ b/share/ui/bounds.ui
@@ -19,7 +19,7 @@
   <object class="GtkListStore" id="BoundsModelsList">
     <columns>
       <!-- column-name ref_model -->
-      <column type="guint"/>
+      <column type="gulong"/>
     </columns>
   </object>
   <object class="GtkListStore" id="ToolLimitModeList">
