renamed events "*-parameter-changed" to "*-changed" migrated task settings to the new parameter manager
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1144 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/processes.ui
+++ b/share/ui/processes.ui
@@ -187,7 +187,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkAlignment" id="alignment1">
+          <object class="GtkAlignment" id="ProcessSelectorBox">
             <property name="visible">True</property>
             <property name="xscale">0</property>
             <property name="yscale">0</property>
