--- a/share/ui/toolpath_crop.ui
+++ b/share/ui/toolpath_crop.ui
@@ -2,20 +2,40 @@
 <interface>
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy project-wide -->
-  <object class="GtkDialog" id="ToolpathCropDialog">
-    <property name="border_width">5</property>
-    <property name="title" translatable="yes">Crop toolpath</property>
-    <property name="type_hint">normal</property>
-    <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox1">
+  <object class="GtkAdjustment" id="ToolpathCropMarginValue">
+    <property name="lower">-1000</property>
+    <property name="upper">1000</property>
+    <property name="step_increment">1</property>
+  </object>
+  <object class="GtkAdjustment" id="ToolpathCropZSliceValue">
+    <property name="lower">-1000</property>
+    <property name="upper">1000</property>
+    <property name="step_increment">1</property>
+  </object>
+  <object class="GtkFrame" id="ToolpathCropFrame">
+    <property name="visible">True</property>
+    <property name="label_xalign">0</property>
+    <property name="shadow_type">none</property>
+    <child>
+      <object class="GtkAlignment" id="alignment1">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
+        <property name="left_padding">12</property>
         <child>
-          <object class="GtkVBox" id="vbox1">
+          <object class="GtkVBox" id="vbox">
             <property name="visible">True</property>
             <property name="orientation">vertical</property>
             <property name="spacing">3</property>
+            <child>
+              <object class="GtkAlignment" id="ModelTableContainer">
+                <property name="visible">True</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="position">0</property>
+              </packing>
+            </child>
             <child>
               <object class="GtkTable" id="table1">
                 <property name="visible">True</property>
@@ -57,7 +77,7 @@
                   <object class="GtkLabel" id="ToolpathCropZSliceLabel">
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Slicing z-level:</property>
+                    <property name="label" translatable="yes">Slicing level (z):</property>
                   </object>
                   <packing>
                     <property name="y_options">GTK_FILL</property>
@@ -81,27 +101,14 @@
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkCheckButton" id="ToolpathCropKeepOriginal">
-                <property name="label" translatable="yes">Keep original toolpath</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="active">True</property>
-                <property name="draw_indicator">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
             <child>
               <object class="GtkViewport" id="ToolpathCropInfoBox">
-                <property name="no_show_all">True</property>
+                <property name="visible">True</property>
                 <property name="resize_mode">queue</property>
+                <property name="shadow_type">etched-out</property>
                 <child>
                   <object class="GtkLabel" id="ToolpathCropInfo">
                     <property name="visible">True</property>
@@ -115,72 +122,54 @@
                 <property name="position">2</property>
               </packing>
             </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
-        <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area1">
-            <property name="visible">True</property>
-            <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="ToolpathCropCancel">
-                <property name="label">gtk-cancel</property>
+              <object class="GtkCheckButton" id="ToolpathCropKeepOriginal">
+                <property name="label" translatable="yes">Keep original toolpath</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
+                <property name="receives_default">False</property>
+                <property name="active">True</property>
+                <property name="draw_indicator">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
+                <property name="position">3</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="ToolpathCropOK">
-                <property name="label">gtk-ok</property>
+              <object class="GtkHButtonBox" id="hbuttonbox1">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
+                <property name="layout_style">start</property>
+                <child>
+                  <object class="GtkButton" id="CropButton">
+                    <property name="label">gtk-execute</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="use_stock">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="position">4</property>
               </packing>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="pack_type">end</property>
-            <property name="position">0</property>
-          </packing>
         </child>
       </object>
     </child>
-    <action-widgets>
-      <action-widget response="0">ToolpathCropCancel</action-widget>
-      <action-widget response="0">ToolpathCropOK</action-widget>
-    </action-widgets>
-  </object>
-  <object class="GtkAdjustment" id="ToolpathCropMarginValue">
-    <property name="lower">-1000</property>
-    <property name="upper">1000</property>
-    <property name="step_increment">1</property>
-  </object>
-  <object class="GtkAdjustment" id="ToolpathCropZSliceValue">
-    <property name="lower">-1000</property>
-    <property name="upper">1000</property>
-    <property name="step_increment">1</property>
-  </object>
-  <object class="GtkButton" id="ToolpathCropButton">
-    <property name="label" translatable="yes">Crop</property>
-    <property name="visible">True</property>
-    <property name="can_focus">True</property>
-    <property name="receives_default">True</property>
+    <child type="label">
+      <object class="GtkLabel" id="label1">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">&lt;b&gt;Crop toolpath&lt;/b&gt;</property>
+        <property name="use_markup">True</property>
+      </object>
+    </child>
   </object>
 </interface>
