--- a/share/ui/toolpaths.ui
+++ b/share/ui/toolpaths.ui
@@ -35,157 +35,146 @@
       </row>
     </data>
   </object>
-  <object class="GtkVBox" id="ToolpathsBox">
+  <object class="GtkVPaned" id="ToolpathsBox">
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
     <property name="orientation">vertical</property>
-    <property name="spacing">3</property>
     <child>
-      <object class="GtkFrame" id="ToolPathTableFrame">
+      <object class="GtkHBox" id="ToolpathsList">
         <property name="visible">True</property>
-        <property name="label_xalign">0</property>
-        <property name="shadow_type">none</property>
+        <property name="spacing">5</property>
         <child>
-          <object class="GtkAlignment" id="alignment8">
+          <object class="GtkScrolledWindow" id="scrolledwindow1">
             <property name="visible">True</property>
-            <property name="top_padding">2</property>
-            <property name="left_padding">12</property>
+            <property name="can_focus">True</property>
+            <property name="hscrollbar_policy">automatic</property>
+            <property name="vscrollbar_policy">automatic</property>
+            <property name="shadow_type">etched-in</property>
             <child>
-              <object class="GtkHBox" id="hbox5">
+              <object class="GtkTreeView" id="ToolpathTable">
                 <property name="visible">True</property>
-                <property name="spacing">5</property>
+                <property name="can_focus">True</property>
+                <property name="model">ToolpathListModel</property>
+                <property name="headers_clickable">False</property>
+                <property name="search_column">0</property>
                 <child>
-                  <object class="GtkScrolledWindow" id="scrolledwindow1">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">automatic</property>
-                    <property name="vscrollbar_policy">automatic</property>
-                    <property name="shadow_type">etched-in</property>
+                  <object class="GtkTreeViewColumn" id="ToolpathVisibleColumn">
+                    <property name="title">Visible</property>
                     <child>
-                      <object class="GtkTreeView" id="ToolpathTable">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="model">ToolpathListModel</property>
-                        <property name="headers_clickable">False</property>
-                        <property name="search_column">0</property>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="ToolpathVisibleColumn">
-                            <property name="title">Visible</property>
-                            <child>
-                              <object class="GtkCellRendererPixbuf" id="ToolpathVisibleSymbol">
-                                <property name="stock_size">2</property>
-                              </object>
-                              <attributes>
-                                <attribute name="cell-background">3</attribute>
-                              </attributes>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="ToolpathNameColumn">
-                            <property name="title">Operation</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="ToolpathNameCell"/>
-                              <attributes>
-                                <attribute name="text">1</attribute>
-                              </attributes>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="ToolpathTimeColumn">
-                            <property name="title">Machine Time</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="ToolpathTimeCell"/>
-                            </child>
-                          </object>
-                        </child>
+                      <object class="GtkCellRendererPixbuf" id="ToolpathVisibleSymbol">
+                        <property name="stock_size">2</property>
                       </object>
                     </child>
                   </object>
-                  <packing>
-                    <property name="position">0</property>
-                  </packing>
                 </child>
                 <child>
-                  <object class="GtkVButtonBox" id="vbuttonbox5">
-                    <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
-                    <property name="layout_style">center</property>
+                  <object class="GtkTreeViewColumn" id="ToolpathNameColumn">
+                    <property name="title">Name</property>
                     <child>
-                      <object class="GtkButton" id="ToolpathDelete">
-                        <property name="label">gtk-delete</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="use_stock">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="ToolpathDeleteAll">
-                        <property name="label">gtk-clear</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="use_stock">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="ToolpathMoveUp">
-                        <property name="label">gtk-go-up</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="use_stock">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">2</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="ToolpathMoveDown">
-                        <property name="label">gtk-go-down</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="use_stock">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">3</property>
-                      </packing>
+                      <object class="GtkCellRendererText" id="ToolpathNameCell"/>
+                      <attributes>
+                        <attribute name="text">1</attribute>
+                      </attributes>
                     </child>
                   </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="position">1</property>
-                  </packing>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn" id="ToolpathTimeColumn">
+                    <property name="title">Machine Time</property>
+                    <child>
+                      <object class="GtkCellRendererText" id="ToolpathTimeCell"/>
+                    </child>
+                  </object>
                 </child>
               </object>
             </child>
           </object>
+          <packing>
+            <property name="position">0</property>
+          </packing>
         </child>
-        <child type="label">
-          <object class="GtkLabel" id="ToolPathTableLabel">
+        <child>
+          <object class="GtkVButtonBox" id="vbuttonbox5">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">&lt;b&gt;List of generated Toolpaths&lt;/b&gt;</property>
-            <property name="use_markup">True</property>
+            <property name="orientation">vertical</property>
+            <property name="layout_style">center</property>
+            <child>
+              <object class="GtkButton" id="ToolpathDelete">
+                <property name="label">gtk-delete</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="ToolpathDeleteAll">
+                <property name="label">gtk-clear</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="ToolpathMoveUp">
+                <property name="label">gtk-go-up</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="ToolpathMoveDown">
+                <property name="label">gtk-go-down</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
           </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">1</property>
+          </packing>
         </child>
       </object>
       <packing>
-        <property name="position">0</property>
+        <property name="resize">True</property>
+        <property name="shrink">False</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkNotebook" id="ToolpathHandlingNotebook">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="tab_pos">left</property>
+      </object>
+      <packing>
+        <property name="resize">False</property>
+        <property name="shrink">False</property>
       </packing>
     </child>
   </object>
