fixed some issues of the support model plugins (not finished)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1165 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/model_support.ui
+++ b/share/ui/model_support.ui
@@ -18,7 +18,7 @@
                 <property name="orientation">vertical</property>
                 <property name="spacing">5</property>
                 <child>
-                  <object class="GtkHBox" id="hbox26">
+                  <object class="GtkHButtonBox" id="hbuttonbox1">
                     <property name="visible">True</property>
                     <child>
                       <object class="GtkComboBox" id="SupportGridTypesControl">
@@ -39,12 +39,21 @@
                       </packing>
                     </child>
                     <child>
-                      <placeholder/>
+                      <object class="GtkButton" id="CreateSupportModel">
+                        <property name="label" translatable="yes">Create support model</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
                     </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">False</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
