replaced the model box in the bounds settings with ControlsGTK.InputTable (fixes some minor glitches) initialize the state of all buttons correctly during registration
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1188 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/bounds.ui
+++ b/share/ui/bounds.ui
@@ -16,12 +16,6 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="BoundsModelsList">
-    <columns>
-      <!-- column-name ref_model -->
-      <column type="gulong"/>
-    </columns>
-  </object>
   <object class="GtkListStore" id="ToolLimitModeList">
     <columns>
       <!-- column-name description -->
@@ -754,27 +748,12 @@
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkViewport" id="viewport2">
+                              <object class="GtkViewport" id="ModelsViewPort">
                                 <property name="visible">True</property>
                                 <property name="resize_mode">queue</property>
                                 <property name="shadow_type">etched-out</property>
                                 <child>
-                                  <object class="GtkTreeView" id="BoundsModelsTable">
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="model">BoundsModelsList</property>
-                                    <property name="headers_visible">False</property>
-                                    <property name="headers_clickable">False</property>
-                                    <property name="search_column">0</property>
-                                    <child>
-                                      <object class="GtkTreeViewColumn" id="ModelDescriptionColumn">
-                                        <property name="title">Model</property>
-                                        <child>
-                                          <object class="GtkCellRendererText" id="ModelNameCell"/>
-                                        </child>
-                                      </object>
-                                    </child>
-                                  </object>
+                                  <placeholder/>
                                 </child>
                               </object>
                               <packing>
