update toolpath time after change warn if process or task parameters are missing use first value of selector, if non was specified
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1191 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/bounds.ui
+++ b/share/ui/bounds.ui
@@ -748,10 +748,9 @@
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkViewport" id="ModelsViewPort">
+                              <object class="GtkVBox" id="ModelsViewPort">
                                 <property name="visible">True</property>
-                                <property name="resize_mode">queue</property>
-                                <property name="shadow_type">etched-out</property>
+                                <property name="orientation">vertical</property>
                                 <child>
                                   <placeholder/>
                                 </child>
