migrated remaining GCode settings fixed GCode settings visualization
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1194 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/gcode_preferences.ui
+++ b/share/ui/gcode_preferences.ui
@@ -4,6 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="GCodePreferencesWindow">
     <property name="border_width">5</property>
+    <property name="title" translatable="yes">GCode preferences</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
