--- a/share/ui/bounds.ui
+++ b/share/ui/bounds.ui
@@ -33,14 +33,6 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="BoundsList">
-    <columns>
-      <!-- column-name ref -->
-      <column type="gulong"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
   <object class="GtkAdjustment" id="BoundaryLowXValue">
     <property name="lower">-2000</property>
     <property name="upper">2000</property>
@@ -71,6 +63,12 @@
     <property name="upper">2000</property>
     <property name="step_increment">1</property>
   </object>
+  <object class="GtkListStore" id="BoundsList">
+    <columns>
+      <!-- column-name ref -->
+      <column type="gulong"/>
+    </columns>
+  </object>
   <object class="GtkVPaned" id="BoundsBox">
     <property name="visible">True</property>
     <property name="can_focus">True</property>
@@ -87,23 +85,20 @@
             <property name="vscrollbar_policy">automatic</property>
             <property name="shadow_type">etched-in</property>
             <child>
-              <object class="GtkTreeView" id="BoundsEditTable">
+              <object class="GtkTreeView" id="BoundsTable">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="model">BoundsList</property>
                 <property name="headers_clickable">False</property>
                 <property name="search_column">0</property>
                 <child>
-                  <object class="GtkTreeViewColumn" id="DescriptionColumn">
+                  <object class="GtkTreeViewColumn" id="NameColumn">
                     <property name="title">Name</property>
                     <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="NameCell">
                         <property name="editable">True</property>
                       </object>
-                      <attributes>
-                        <attribute name="text">1</attribute>
-                      </attributes>
                     </child>
                   </object>
                 </child>
