--- a/share/ui/models.ui
+++ b/share/ui/models.ui
@@ -6,24 +6,7 @@
     <columns>
       <!-- column-name id -->
       <column type="gulong"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-      <!-- column-name state -->
-      <column type="gboolean"/>
-      <!-- column-name color -->
-      <column type="gchararray"/>
-      <!-- column-name alpha -->
-      <column type="guint"/>
     </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">Model #1</col>
-        <col id="2">False</col>
-        <col id="3" translatable="yes">#ffff00000000</col>
-        <col id="4">0</col>
-      </row>
-    </data>
   </object>
   <object class="GtkWindow" id="window1">
     <child>
@@ -48,29 +31,20 @@
                     <property name="model">ModelList</property>
                     <property name="headers_visible">False</property>
                     <child>
-                      <object class="GtkTreeViewColumn" id="ModelVisibleColumn">
-                        <property name="title">column</property>
-                        <property name="clickable">True</property>
+                      <object class="GtkTreeViewColumn" id="VisibleColumn">
                         <child>
-                          <object class="GtkCellRendererPixbuf" id="ModelVisibleSymbol">
+                          <object class="GtkCellRendererPixbuf" id="VisibleSymbol">
                             <property name="stock_size">2</property>
                           </object>
-                          <attributes>
-                            <attribute name="cell-background">3</attribute>
-                          </attributes>
                         </child>
                       </object>
                     </child>
                     <child>
-                      <object class="GtkTreeViewColumn" id="treeviewcolumn2">
-                        <property name="title">column</property>
+                      <object class="GtkTreeViewColumn" id="NameColumn">
                         <child>
-                          <object class="GtkCellRendererText" id="ModelNameColumn">
+                          <object class="GtkCellRendererText" id="NameCell">
                             <property name="editable">True</property>
                           </object>
-                          <attributes>
-                            <attribute name="text">1</attribute>
-                          </attributes>
                         </child>
                       </object>
                     </child>
