--- a/share/ui/tasks.ui
+++ b/share/ui/tasks.ui
@@ -12,76 +12,6 @@
     <property name="upper">10000</property>
     <property name="step_increment">1</property>
   </object>
-  <object class="GtkListStore" id="TaskList">
-    <columns>
-      <!-- column-name index -->
-      <column type="guint"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">Rough</col>
-      </row>
-    </data>
-  </object>
-  <object class="GtkListStore" id="ToolList">
-    <columns>
-      <!-- column-name ref -->
-      <column type="guint"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">Tool #1</col>
-      </row>
-    </data>
-  </object>
-  <object class="GtkListStore" id="ProcessList">
-    <columns>
-      <!-- column-name ref -->
-      <column type="guint"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">Process #1</col>
-      </row>
-    </data>
-  </object>
-  <object class="GtkListStore" id="BoundsList">
-    <columns>
-      <!-- column-name ref -->
-      <column type="guint"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">Bounds #1</col>
-      </row>
-    </data>
-  </object>
-  <object class="GtkListStore" id="ModelsList">
-    <columns>
-      <!-- column-name ref -->
-      <column type="guint"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">Model #1</col>
-      </row>
-    </data>
-  </object>
   <object class="GtkListStore" id="TaskTypeList">
     <columns>
       <!-- column-name label -->
@@ -95,6 +25,12 @@
         <col id="1" translatable="yes">sfd</col>
       </row>
     </data>
+  </object>
+  <object class="GtkListStore" id="TaskList">
+    <columns>
+      <!-- column-name index -->
+      <column type="gulong"/>
+    </columns>
   </object>
   <object class="GtkVPaned" id="TaskBox">
     <property name="visible">True</property>
@@ -121,13 +57,10 @@
                 <property name="enable_search">False</property>
                 <property name="search_column">0</property>
                 <child>
-                  <object class="GtkTreeViewColumn" id="TaskNameColumn">
+                  <object class="GtkTreeViewColumn" id="NameColumn">
                     <property name="title">Name</property>
                     <child>
-                      <object class="GtkCellRendererText" id="TaskNameCell"/>
-                      <attributes>
-                        <attribute name="text">1</attribute>
-                      </attributes>
+                      <object class="GtkCellRendererText" id="NameCell"/>
                     </child>
                   </object>
                 </child>
