added another OpenGL setting ("use caching") - this should solve the problem reported by a Windows user: * http://sourceforge.net/tracker/index.php?func=detail&aid=3465407&group_id=237831&atid=1104176
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1226 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/opengl.ui
+++ b/share/ui/opengl.ui
@@ -134,6 +134,20 @@
                 <property name="position">4</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkCheckButton" id="OpenGLCache">
+                <property name="label" translatable="yes">Use caching</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="tooltip_text" translatable="yes">OpenGL caching (via Display Lists) works without problems for most users. But if your 3D view is distorted or not usable at all, then you should consider to disable caching. The cache improves performance significantly.</property>
+                <property name="draw_indicator">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">4</property>
+              </packing>
+            </child>
           </object>
         </child>
       </object>
