fixed alignment for bounding box buttons
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1230 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/bounds.ui
+++ b/share/ui/bounds.ui
@@ -211,6 +211,7 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
