minimal label fixes
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1237 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/parallel_processing.ui
+++ b/share/ui/parallel_processing.ui
@@ -795,8 +795,8 @@ Note: The Windows standalone executable does not support parallel processing. Pl
     </child>
   </object>
   <object class="GtkToggleAction" id="ToggleProcessPoolWindow">
-    <property name="label">_Process Pool Window</property>
-    <property name="short_label">_Process Pool Window</property>
+    <property name="label">_Process Pool</property>
+    <property name="short_label">_Process Pool</property>
     <property name="tooltip">Show the current pool of workers</property>
   </object>
 </interface>
