--- a/share/ui/opengl.ui
+++ b/share/ui/opengl.ui
@@ -33,8 +33,8 @@
     </child>
   </object>
   <object class="GtkToggleAction" id="Toggle3DView">
-    <property name="label">3D _View Window</property>
-    <property name="short_label">3D _View Window</property>
+    <property name="label">3D _View</property>
+    <property name="short_label">3D _View</property>
     <property name="tooltip">Display the model in the 3D view window.</property>
   </object>
   <object class="GtkFrame" id="OpenGLPrefTab">
